--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "1.1.0",
   "description": "",
-  "homepage": "https://github.com/AleksandraAleksinska/Projekt-Filmoteka",
+  "homepage": "https://https://github.com/barteknr1/Filmoteka",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /Projekt-Filmoteka"
+    "build": "parcel build src/*.html --public-url /Filmoteka"
   },
   "repository": {
     "type": "git",
